forgot to run swagger autogen. + stables docs
